--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
+        <h1>Module 5 assignment</h1>
+
+        <h2>Today, we're using loops and doing CSS using Javascript!</h2>
+
+        <h3>Look in the console for examples of For and While loops!</h3>
+
         <h3>Below is an example of editing CSS through DOM manipulation!</h3>
         <p id="hahaYes">Look at me go, I'm green and comically large!</p>
 
